ghostblog/ghost-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ghost
  namespace: ghostblog
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:1.21.3
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: data
          mountPath: /var/lib/ghost/content
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ghost
