ghostblog/ghost-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghostblog
spec:
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 2368
    targetPort: 2368
